[project]
name = "pyopenxr-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "glfw>=2.10.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pyopengl>=3.1.10",
    "pyopenxr>=1.1.5301",
    "rich>=14.2.0",
    "scipy>=1.15.3",
]
